--- a/src/sass/variables/_fonts.scss
+++ b/src/sass/variables/_fonts.scss
@@ -1,1 +1,2 @@
-
+@import url("/node_modules/@fontsource/big-shoulders-display/400.css");
+@import url("/node_modules/@fontsource/lexend-deca/700.css");
