--- a/src/sass/card/_car-card.scss
+++ b/src/sass/card/_car-card.scss
@@ -1,24 +1,36 @@
 @use "../variables/colors";
 @use "../reset/reset";
-@use "../variables/fonts";
 
 .car-card {
   background-color: colors.$color-primary--Bright-orange;
-  justify-content: space-between;
-  width: 320px;
-  height: 1325px;
+  width: 330px;
+  height: 441px;
   display: flex;
   flex-direction: column;
-  border-radius: 15px;
-  border: 3px solid red;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  padding-left: 50px;
+  padding-top: 47px;
+  padding-right: 53px;
+  gap: 40px;
+}
+
+h2 {
+  height: 36px;
+  color: #f7dfc4;
 }
 
 .info-button {
   font-size: 15px;
+  color: #f2f2f0;
+  border-radius: 30px;
+  height: 50px;
+  width: 148px;
 }
 
 .card-description {
   justify-content: space-between;
   display: flex;
   font-size: 15px;
+  color: #f4bc6f;
 }
